[tool.poetry]
name = "active-pr"
version = "0.1.0"
description = "an active report of PRs in the github"
authors = ["kyoto7250 <50972773+kyoto7250@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyoto7250/active_pr"
repository = "https://github.com/kyoto7250/active_pr"
keywords = ["api", "github", "cli", "report"]

[tool.poetry.scripts]
active_pr = "active_pr.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^2.1.1"
rich = "^13.6.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.0"
ruff = "^0.1.0"
pytest = "^7.4.2"
httpretty = "^1.1.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "active_pr"
]
